<resources>
    <string name="app_name">testProject</string>
    <string name="login">Login</string>
    <string name="pokedex">PokeDex</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chip_text">SOMETHING</string>
</resources>